--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="Bottom-container">
     <h2 class="H2"><strong>Get In Touch</strong></h2>
     <div class="Contact-Me">
-      <a href="mailto:natansh175@gmail.com"><img class="Footer-link" src="Images/G-Mail.png" alt="G-Mail Icon" hspace="20"></a>
+      <a href="mailto:natansh175@gmail.com"><img class="Footer-link" src="Images/GMail.png" alt="GMail Icon" hspace="20"></a>
       <a href="https://www.linkedin.com/in/natansh-shah-281524204/"><img class="Footer-link" src="Images/LinkedIn.png" alt="LinkedIn Icon" hspace="20"></a>
       <a href="https://www.instagram.com/natansh_1753/"><img class="Footer-link" src="Images/Instagram.png" alt="Instagram Icon" hspace="20"></a>
       <a href="https://github.com/Natansh175"><img class="Footer-link" src="Images/Github.png" alt="Github Icon" hspace="20"></a>
