--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </div>
 <body>
   
-  <div class="Top-container" style="background-image: url(Images/BG.jpg);">
+  <div class="Top-container" style="background-image: url(Images/BG1.jpg);">
     <h1 id="text"></h1>
     <p class="Pro" style="color: #fff;" id="Pro"></p>
   </div>
